--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
             </ul>
         </div>
     </nav>
-    <header id="main-header" class="main-header">
-        <div class="header">
-            <div class="title container">
-                <h3 class="name">My name is Vijay Kumar</h3>
-                <h3 class="name">I am a Front-end developer</h3>
+    <div id="aboutme">
+        <header id="main-header" class="main-header">
+            <div class="header">
+                <div class="title container">
+                    <h3 class="name">My name is Vijay Kumar</h3>
+                    <h3 class="name">I am a Front-end developer</h3>
+                </div>
             </div>
-        </div>
-    </header>
+        </header>
+    </div>
     <section id="projects" class="projects">
         <div class="project_info container">
             <h1 class="project-title">PROJECTS</h1>
